// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fetch resolve data with lazy loading. 1`] = `
<div>
  parent
</div>
`;

exports[`Fetch resolve data with lazy loading. 2`] = `
<div>
  child
</div>
`;

exports[`Fetch resolve data with reusable resolve data. 1`] = `
Object {
  "web": Object {
    "projects": Array [
      Object {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": "old user",
  },
}
`;

exports[`Fetch resolve data. 1`] = `
Object {
  "web": Object {
    "projects": Array [
      Object {
        "id": "AWgrmJp1SjjuUM2bzZXM",
        "title": "Project",
      },
    ],
    "user": Object {
      "id": "AWgrmJp1SjjuUM2bzZXM",
      "name": "User",
    },
  },
}
`;

exports[`Find the route by the name. 1`] = `
Route {
  "component": undefined,
  "dismissalDelay": undefined,
  "generateLocation": [Function],
  "generateUri": [Function],
  "isAbstract": false,
  "loadComponent": undefined,
  "matchPattern": "/",
  "matchReg": /\\^\\\\/\\$/,
  "name": "web",
  "onEnter": undefined,
  "parents": Array [],
  "resolve": Object {},
  "uri": "/",
  "uriParamKeys": Array [],
  "uriTemplate": "/",
}
`;

exports[`Flatten resolve data. 1`] = `
Object {
  "user": Object {
    "id": "id",
    "name": "name",
  },
}
`;

exports[`Parse params from the location. 1`] = `
Object {
  "index": "0",
  "sort": "asc",
  "userId": "AWgrmJp1SjjuUM2bzZXM",
}
`;
